--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h4>Posted on 15 Dec 2013 / Desserts</h4>
                 <button class="img-right">
                     <img src="assets/print-icon.png" alt="print icon" class="float-left">
-                    <p>print</p>
+                    <h4>print</h4>
                 </button>
             </header>
             <section>
@@ -102,12 +102,12 @@
             </section>
             <div class="dashdash clear-left clear-right"></div>
             <section>
-                    <button class="float-right">
+                    <button class="float-right buttonstyle">
                     Share recipe
                     </button>
-                <img src="assets/van-pic.png" alt="Vanessa Stevenson photo" class="float-left">
-                <h2>Vanessa Stevenson</h2>
-                <p>Food enthusiast, photography fan. Add a pinch of raw foodium and that's pretty much who I am.</p>
+                <img src="assets/van-pic.png" alt="Vanessa Stevenson photo" class="float-left comment-img">
+                <h3>Vanessa Stevenson</h3>
+                <p class="comment">Food enthusiast, photography fan. Add a pinch of raw foodium and that's pretty much who I am.</p>
             </section>
         </article>
         <footer>
